# main_gtests

./: .gitignore  CMakeLists.txt  Jenkinsfile
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/calculator/: calculator.cpp  calculator.h  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp
